--- a/public/views/newroom.html
+++ b/public/views/newroom.html
@@ -2,15 +2,17 @@
 <html lang="en" class="no-js">
     <head>
         <!-- https://github.com/mikecao/umami -->
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QDQNY8YQ4T"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QDQNY8YQ4T"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
 
-  gtag('config', 'G-QDQNY8YQ4T');
-</script>
+            gtag('config', 'G-QDQNY8YQ4T');
+        </script>
 
         <!-- Title and Icon -->
 
@@ -168,9 +170,7 @@
                             </li>
                             <li>
                                 Contact:
-                                <a target="_blank" href="https://www.linkedin.com/company/featlyapp/"
-                                    >Featly Inc.</a
-                                >
+                                <a target="_blank" href="https://www.linkedin.com/company/featlyapp/">Featly Inc.</a>
                             </li>
                         </ul>
                         <ul class="footer-social-links list-reset">
