--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -144,12 +144,16 @@ access to use this app.
             </div>
         </section>
 
-        <header id="header" class="fadein">
-            <img id="header-logo" src="../images/featlyLogo.svg" alt="logo" />
-            <div id="header-center-block">
+        <header class="fadein header">
+            <img class="header-logo" src="../images/featlyLogo.svg" alt="logo" />
+            <nav id="header-nav">
+                <a href="#">What is Featly?</a>
+                <a href="#"> Examples of using</a>
+            </nav>
+            <!-- <div id="header-center-block">
                 <h1>Videomeeting</h1>
                 <span>12:53</span>
-            </div>
+            </div> -->
         </header>
 
         <div id="control" class="hidden">
