--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -252,19 +252,33 @@ a {
 # Header
 --------------------------------------------------------------*/
 
-#header {
+.header {
     height: 88px;
     width: 100%;
     padding: 12px 24px;
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-columns: 160px 1fr 160px;
     align-items: center;
     background: var(--control-bg);
 }
 
-#header-logo {
+.header-logo {
     width: 160px;
     height: auto;
+}
+
+#header-nav {
+    margin-left: 48px;
+    gap: 32px;
+    display: flex;
+}
+
+#header-nav a {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: -0.02em;
+    color: #ffffff;
 }
 
 #header-center-block {
