--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -149,17 +149,17 @@ access to use this app.
 
         <header class="fadein header">
             <img class="header-logo" src="../images/featlyLogo.svg" alt="logo" />
-            <!-- <nav id="header-nav">
+            <nav id="header-nav">
                 <a href="#">What is Featly?</a>
                 <a href="#"> Examples of using</a>
-            </nav> -->
-            <div id="header-center-block">
+            </nav>
+            <!-- <div id="header-center-block">
                 <h1>Videomeeting</h1>
                 <span>12:53</span>
-            </div>
+            </div> -->
         </header>
 
-        <div id="control">
+        <div id="control" class="hidden">
             <div class="control-buttons-box">
                 <div class="button-box">
                     <button id="startAudioButton" class="hidden"><i class="fas fa-microphone-slash"></i></button>
