* disabled chat actions

--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -458,31 +458,31 @@ access to use this app.
                                 ></textarea>
                     </div>
                     <div class="chat-msger-buttons">
-                        <button id="chatEmojiButton" class="hidden">
-                            <i class="fas fa-smile"></i>
-                        </button>
-                        <button id="chatMarkdownButton" class="hidden">
-                            <i class="fab fa-markdown"></i>
-                        </button>
+<!--                        <button id="chatEmojiButton" class="hidden">-->
+<!--                            <i class="fas fa-smile"></i>-->
+<!--                        </button>-->
+<!--                        <button id="chatMarkdownButton" class="hidden">-->
+<!--                            <i class="fab fa-markdown"></i>-->
+<!--                        </button>-->
                         <button id="chatShareFileButton" class="hidden">
                             <i class="fas fa-paperclip"></i>
                         </button>
-                        <button id="chatSpeechStartButton" class="hidden">
-                            <i class="fas fa-microphone-slash"></i>
-                        </button>
-                        <button id="chatSpeechStopButton" class="hidden">
-                            <i class="fas fa-microphone"></i>
-                        </button>
-                        <button id="chatCleanTextButton" class="hidden">
-                            <i class="fas fa-trash"></i>
-                        </button>
-                        <button id="chatPasteButton" class="hidden">
-                            <i class="fas fa-paste"></i>
-                        </button>
-                        <div class="form-check form-switch form-switch-md">
-                            &nbsp;&nbsp;&nbsp;
-                            <input class="form-check-input" type="checkbox" id="showChatOnMsg" checked />
-                        </div>
+<!--                        <button id="chatSpeechStartButton" class="hidden">-->
+<!--                            <i class="fas fa-microphone-slash"></i>-->
+<!--                        </button>-->
+<!--                        <button id="chatSpeechStopButton" class="hidden">-->
+<!--                            <i class="fas fa-microphone"></i>-->
+<!--                        </button>-->
+<!--                        <button id="chatCleanTextButton" class="hidden">-->
+<!--                            <i class="fas fa-trash"></i>-->
+<!--                        </button>-->
+<!--                        <button id="chatPasteButton" class="hidden">-->
+<!--                            <i class="fas fa-paste"></i>-->
+<!--                        </button>-->
+<!--                        <div class="form-check form-switch form-switch-md">-->
+<!--                            &nbsp;&nbsp;&nbsp;-->
+<!--                            <input class="form-check-input" type="checkbox" id="showChatOnMsg" checked />-->
+<!--                        </div>-->
                         <button id="chatSendButton" class="hidden">
                             <i class="fas fa-paper-plane"></i>
                         </button>
