* commented chat header's icons

--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -438,11 +438,11 @@ access to use this app.
                         <div class="chat-header-title">
                             <button id="chatCloseButton" class="fas fa-times"></button>
                         </div>
-                        <div class="chat-header-options">
-                            <button id="chatGhostButton" class="fas fa-circle-half-stroke"></button>
-                            <button id="chatSaveButton" class="fas fa-save"></button>
-                            <button id="chatCleanButton" class="fas fa-trash"></button>
-                        </div>
+<!--                        <div class="chat-header-options">-->
+<!--                            <button id="chatGhostButton" class="fas fa-circle-half-stroke"></button>-->
+<!--                            <button id="chatSaveButton" class="fas fa-save"></button>-->
+<!--                            <button id="chatCleanButton" class="fas fa-trash"></button>-->
+<!--                        </div>-->
                     </header>
                     <main id="chatMsger" class="chat-msger">
                         <!-- chat messages -->
